# din_2k10

./: AUTHORS  BUGS  CHANGELOG  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  am.txt  bhairav.drone  bhoopali.drone  blues.drone  channel_editor.txt  checkdotdin  coml.txt  compressor_editor.txt  comr.txt  curve_editor.hlp  darbari.drone  default_map.txt  din_help.txt  din_info  drone.txt  drone_editor.txt  et.txt  fft_levels  fm.txt  font_editor.txt  gater_editor.txt  gater_pattern_lib.txt  globals  jag.fnt  ji.txt  jog.drone  malkauns.drone  mod_editor.txt  multani.drone  one  patl.txt  patr.txt  pytha.txt  ragalist  shivaranjani.drone  sine_levels  strength_editor.txt  strength_editor_help.txt  (+4 more)
include/: Makefile.am  Makefile.in  audio.h  basic_editor.h  beat2value.h  box.h  checkdotdin.h  chrono.h  color.h  command.h  compressor.h  console.h  console_iterator.h  container.h  crvpt.h  curve.h  curve_editor.h  curve_library.h  curve_listener.h  delay.h  din.h  fft.h  font.h  font_editor.h  globals.h  glyph.h  help.h  input.h  levels.h  line.h  listeners.h  mocap.h  modder.h  multi_curve.h  note.h  osc.h  oscilloscope.h  phrasor.h  play.h  point.h  (+17 more)
src/: Makefile.am  Makefile.in  audio.cc  basic_editor.cc  beat2value.cc  chrono.cc  command.cc  compressor.cc  console.cc  console_iterator.cc  curve.cc  curve_editor.cc  curve_library.cc  delay.cc  din.cc  fft.cc  font.cc  font_editor.cc  glyph.cc  help.cc  levels.cc  line.cc  listeners.cc  main.cc  mocap.cc  multi_curve.cc  note.cc  osc.cc  oscilloscope.cc  phrasor.cc  play.cc  raga_info.cc  ragalist.cc  range.cc  sine_mixer.cc  solver.cc  strength_editor.cc  textboard.cc  viewwin.cc
