AC_INIT([din], [1.0.1])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([configure.ac])
AC_PROG_CXX
PKG_CHECK_MODULES([portaudio], [portaudio-2.0])
PKG_CHECK_MODULES([sdl], [sdl])
PKG_CHECK_MODULES([fftw3f], [fftw3f])
PKG_CHECK_MODULES([gl], [gl])
PKG_CHECK_MODULES([liblo],[liblo])
AC_CONFIG_FILES([Makefile src/Makefile data/Makefile include/Makefile])
AC_OUTPUT
