## Process this file with automake to produce Makefile.in

#dinincludedir = $(pkgincludedir)

dist_include = \
box.h\
utils.h\
vector2d.h\
tick.h\
chrono.h\
ui.h\
glyph.h\
line.h\
font_editor.h\
font.h\
console.h\
viewwin.h\
input.h\
oscilloscope.h\
point.h\
curve.h\
multi_curve.h\
play.h\
curve_editor.h\
basic_editor.h\
listeners.h\
console_iterator.h\
audio.h\
phrasor.h\
beat2value.h\
random.h\
globals.h\
raga_info.h\
command.h\
ragalist.h\
crvpt.h\
pool.h\
textboard.h\
sine_mixer.h\
levels.h\
fft.h\
help.h\
mocap.h\
din.h\
curve_library.h\
delay.h\
curve_listener.h\
strength_editor.h\
range.h\
resonator.h\
modder.h\
volume.h\
note.h\
color.h\
stereo.h\
solver.h\
container.h\
checkdotdin.h\
compressor.h\
osc.h

EXTRA_DIST = $(dist_include)
