AM_CXXFLAGS = $(portaudio_CFLAGS) $(sdl_CFLAGS) $(fftw3f_CFLAGS) $(gl_CFLAGS) $(liblo_CFLAGS) -I ../include -Wall -O2 -g
LIBS += $(portaudio_LIBS) $(sdl_LIBS) $(fftw3f_LIBS) $(gl_LIBS) $(liblo_LIBS)

bin_PROGRAMS = din

din_SOURCES = \
main.cc\
din.cc\
audio.cc\
range.cc\
note.cc\
play.cc\
curve.cc\
multi_curve.cc\
solver.cc\
curve_library.cc\
basic_editor.cc\
curve_editor.cc\
strength_editor.cc\
listeners.cc\
console.cc\
console_iterator.cc\
help.cc\
line.cc\
font.cc\
glyph.cc\
oscilloscope.cc\
delay.cc\
viewwin.cc\
mocap.cc\
beat2value.cc\
raga_info.cc\
command.cc\
ragalist.cc\
textboard.cc\
sine_mixer.cc\
levels.cc\
fft.cc\
chrono.cc\
font_editor.cc\
phrasor.cc\
compressor.cc\
osc.cc
